Add html code for group website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-  <h>Hey!</h> 
-</body>
+
+<html>
+  <head>
+      <h1>The Great Amateurs' Blog</h1>
+    
+
+        <h2>Main Page for Amazingness</h2>
+
+  </head>
+
+  <body>
+    <section>
+      <h3>Contents</h3>
+        <ul>
+          <li>
+            <a href="/Page-01.html" >First Page</a>
+          </li>
+          <li>
+            <a href="/Page-02.html">Second Page</a>
+          </li>
+          <li>
+            <a href="/Page-03.html">Third Page</a>
+          </li>
+          <li>
+            <a href="/Page-04.html">Fourth Page</a>
+          </li>
+          <li>
+            <a href="/Page-05.html">Fifth Page</a>
+          </li>
+        </ul>
+    </section>
+    
+    <section>
+      <h4>Who Are We?</h4>
+        <p>Hannah, Andrew and Mario!!!</p>
+      <h4>What Will You Find Here?</h4>
+        <p>Amazingness. Obvs. </p>
+    </section>
+
+    <section>
+      <h4>Title About Something Interesting</h4>
+        <p>Hey! this is my test whats up</p>
+        <p>RhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarb</p>
+
+        <p>RhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarbRhubarb</p>
+    </section>
+  </body>  
+  
+  <footer>
+    <p>Website created by Han1620</p>
+  </footer>
+  
 </html>
